--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="Tito.jpg" alt="Tito Photo">
+        <img src="Tito.JPG" alt="Tito Photo">
       </td>
       <td>
         <h1><a href="https://sports.yahoo.com/">Tito Donoso</a></h1>
